<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.sunday.sundaymovie.activity.MovieDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="left"
            app:collapsedTitleTextAppearance="@style/CollapsingText"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/ExpandedText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_top_bg_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/demo_gb_img"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back_white_24dp"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_main_img"
                    android:layout_width="128dp"
                    android:layout_height="183dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/demo_main_img"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_movie_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="盗梦空间"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"/>

                    <TextView
                        android:id="@+id/tv_movie_en_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="Inception"
                        android:textColor="@color/secondaryText_2"/>

                    <TextView
                        android:id="@+id/tv_is_3D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/text_bg_3d_false"
                        android:gravity="center"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/_3d"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <RatingBar
                            android:id="@+id/rb_overall_rating"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:rating="4.55"/>

                        <TextView
                            android:id="@+id/tv_overall_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:text="9.1 分"
                            android:textColor="@android:color/secondary_text_light"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_movie_type"
                        style="@style/BaseInfoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="动作/冒险/科幻/惊悚"/>

                    <TextView
                        android:id="@+id/tv_movie_director_name"
                        style="@style/BaseInfoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="导演: 克里斯托弗·诺兰"/>


                    <TextView
                        android:id="@+id/tv_movie_release_date_and_area"
                        style="@style/BaseInfoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="上映日期: 2010-9-1(中国)"/>

                    <TextView
                        android:id="@+id/tv_movie_mins"
                        style="@style/BaseInfoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="时长: 148分钟"/>
                </LinearLayout>
            </LinearLayout>

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/tv_movie_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/test_text"
                android:textAllCaps="false"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                app:colorClickableText="@color/colorPrimary"
                app:trimCollapsedText="@string/trim_collapsed_text"
                app:trimExpandedText="@string/trim_expanded_text"
                app:trimLines="4"
                app:trimMode="trimModeLine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/photo"
                android:textColor="@color/secondaryText_2"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="4dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <ImageView
                        android:id="@+id/iv_movie_img_1"
                        android:layout_width="154dp"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/demo_gb_img"/>

                    <ImageView
                        android:id="@+id/iv_movie_img_2"
                        android:layout_width="154dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/demo_img_2"/>

                    <ImageView
                        android:id="@+id/iv_movie_img_3"
                        android:layout_width="154dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/demo_img_3"/>

                    <ImageView
                        android:id="@+id/iv_movie_img_4"
                        android:layout_width="154dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/demo_img_4"/>

                    <Button
                        android:id="@+id/btn_all_img"
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:background="@color/secondaryText"
                        android:drawableEnd="@drawable/ic_chevron_right_white_24dp"
                        android:ems="1"
                        android:gravity="center_vertical|end"
                        android:text="全部图片"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/video"
                android:textColor="@color/secondaryText_2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/fl_movie_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_movie_video_img"
                        android:layout_width="224dp"
                        android:layout_height="126dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/demo_movie_video_img"/>

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_play_arrow_white_24dp"/>

                    <TextView
                        android:id="@+id/tv_movie_video_title"
                        android:layout_width="152dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        android:layout_margin="4dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/demo_video_name"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"/>
                </FrameLayout>

                <Button
                    android:id="@+id/tv_all_video"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:background="@color/secondaryText"
                    android:drawableEnd="@drawable/ic_chevron_right_white_24dp"
                    android:ems="1"
                    android:gravity="center_vertical|end"
                    android:text="全部视频"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/actor"
                android:textColor="@color/secondaryText_2"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_actor"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:layout_marginTop="4dp"
                android:scrollbars="none"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>